k8s/postgres-deploy.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: postgres
  labels:
    app: rails-kube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-kube-app
      tier: database
  template:
    metadata:
      name: postgres
      labels:
        app: rails-kube-app
        tier: database
    spec:
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres:9.6-alpine
        resources:
          requests:
            memory: 300Mi
            cpu: 300m
          limits:
            memory: 400Mi
            cpu: 400m
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-pv
      nodeSelector:
        kubernetes.io/hostname: node-b1-2
