k8s/somsri-deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - name: app
        image: aong/app:2.4
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 800m
            memory: 800Mi
          requests:
            cpu: 700m
            memory: 700Mi
      restartPolicy: Always
status: {}
